{
  "version": 4,
  "terraform_version": "1.1.7",
  "serial": 143,
  "lineage": "f89b4889-b6cc-6bb9-6335-105ce536edee",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "gwinstance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-081add15c8d7269ec",
            "arn": "arn:aws:ec2:ap-northeast-1:011066745250:instance/i-0160e9a2dd928ce57",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvdcz",
                "encrypted": false,
                "iops": 100,
                "snapshot_id": "snap-0082db587cb27ac5d",
                "throughput": 0,
                "volume_id": "vol-0d9ae1b0232d043fb",
                "volume_size": 22,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ecs-instance-p",
            "id": "i-0160e9a2dd928ce57",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "primary_network_interface_id": "eni-0203bd281390d6b91",
            "private_dns": "ip-10-0-15-166.ap-northeast-1.compute.internal",
            "private_ip": "10.0.15.166",
            "public_dns": "ec2-13-113-151-104.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "13.113.151.104",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0486146dda1c50c99",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03439c6a321c75735",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-066e3c807700f05a0"
            ]
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.gwinstance",
            "data.terraform_remote_state.aws_iam",
            "data.terraform_remote_state.vp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "gwlb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:011066745250:loadbalancer/app/gwlb/edb78042ab1a668e",
            "arn_suffix": "app/gwlb/edb78042ab1a668e",
            "desync_mitigation_mode": "defensive",
            "dns_name": "gwlb-1436656934.ap-northeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:011066745250:loadbalancer/app/gwlb/edb78042ab1a668e",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "gwlb",
            "security_groups": [
              "sg-003ecd4cc84c4e94d"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-03439c6a321c75735"
              },
              {
                "subnet_id": "subnet-09365d861c48cd07f"
              }
            ],
            "subnets": [
              "subnet-03439c6a321c75735",
              "subnet-09365d861c48cd07f"
            ],
            "vpc_id": "vpc-02637b779095c526a",
            "zone_id": "Z14GRHDCWA56QT"
          },
          "dependencies": [
            "aws_security_group.alb",
            "data.terraform_remote_state.vp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:011066745250:targetgroup/gware-http/a7e65e1930d55b58",
            "arn_suffix": "targetgroup/gware-http/a7e65e1930d55b58",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/health_check",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:011066745250:targetgroup/gware-http/a7e65e1930d55b58",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "gware-http",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-02637b779095c526a"
          },
          "dependencies": [
            "data.terraform_remote_state.vp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:011066745250:security-group/sg-003ecd4cc84c4e94d",
            "description": "http and https",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-003ecd4cc84c4e94d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "gw-lb1",
            "name_prefix": "",
            "owner_id": "011066745250",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-02637b779095c526a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.vp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "gwinstance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:011066745250:security-group/sg-066e3c807700f05a0",
            "description": "instance sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-066e3c807700f05a0",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-003ecd4cc84c4e94d"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "gwinstance",
            "name_prefix": "",
            "owner_id": "011066745250",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-02637b779095c526a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "data.terraform_remote_state.vp"
          ]
        }
      ]
    }
  ]
}